// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoardCell(-1, false) matches snapshot. 1`] = `
<div
  className="BoardCell"
  onClick={[Function]}
  role="presentation"
  style={
    Object {
      "backgroundColor": "white",
      "border": "1px solid #CCC",
    }
  }
/>
`;

exports[`BoardCell(-1, true) matches snapshot. 1`] = `
<div
  className="BoardCell"
  onClick={[Function]}
  role="presentation"
  style={
    Object {
      "backgroundColor": "white",
      "border": "1px solid red",
    }
  }
/>
`;

exports[`BoardCell(0, false) matches snapshot. 1`] = `
<div
  className="BoardCell"
  onClick={[Function]}
  role="presentation"
  style={
    Object {
      "backgroundColor": "#DDDDDD",
      "border": "1px solid #CCC",
    }
  }
/>
`;

exports[`BoardCell(0, true) matches snapshot. 1`] = `
<div
  className="BoardCell"
  onClick={[Function]}
  role="presentation"
  style={
    Object {
      "backgroundColor": "#DDDDDD",
      "border": "1px solid red",
    }
  }
/>
`;

exports[`BoardCell(1, false) matches snapshot. 1`] = `
<div
  className="BoardCell"
  onClick={[Function]}
  role="presentation"
  style={
    Object {
      "backgroundColor": "black",
      "border": "1px solid #CCC",
    }
  }
/>
`;

exports[`BoardCell(1, true) matches snapshot. 1`] = `
<div
  className="BoardCell"
  onClick={[Function]}
  role="presentation"
  style={
    Object {
      "backgroundColor": "black",
      "border": "1px solid red",
    }
  }
/>
`;
